--- a/playbooks/roles/info_setup/tasks/main.yaml
+++ b/playbooks/roles/info_setup/tasks/main.yaml
@@ -3,6 +3,7 @@
   module_defaults:
     ansible.builtin.lineinfile:
       create: true
+      firstmatch: true
       mode: "0644"
   block:
     - name: IPv6
