--- a/playbooks/roles/setup_autoupdate/tasks/main.yaml
+++ b/playbooks/roles/setup_autoupdate/tasks/main.yaml
@@ -20,6 +20,7 @@
       mode: "0644"
     ansible.builtin.lineinfile:
       create: true
+      firstmatch: true
       owner: root
       group: root
       mode: "0644"
