--- a/playbooks/roles/setup_snowflake/tasks/firewall.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/firewall.yaml
@@ -9,16 +9,16 @@
     destination_ports: "32768:60999" # /proc/sys/net/ipv4/ip_local_port_range
     jump: ACCEPT
   with_items:
-    - "v4"
-    - "v6"
+    - v4
+    - v6
   register: _firewall
 
 - name: Save iptables state
   community.general.iptables_state:
     ip_version: "ip{{ item }}"
     state: saved
-    path: "{{ '/etc/iptables/rules.' + item }}"
+    path: "/etc/iptables/rules.{{ item }}"
   with_items:
-    - "v4"
-    - "v6"
+    - v4
+    - v6
   when: _firewall.changed
