--- a/playbooks/roles/setup_tor/tasks/config.yaml
+++ b/playbooks/roles/setup_tor/tasks/config.yaml
@@ -20,11 +20,9 @@
 
 - name: Verify torrc
   changed_when: false
-  vars:
-    _user: "{{ tor_build_from_source | ternary('tor', 'root') }}"
   ansible.builtin.command:
-    cmd: |-
-      su {{ _user }} -c "tor --verify-config"
+    cmd: >-
+      su {{ tor_build_from_source | ternary('tor', 'root') }} -c "tor --verify-config"
 
 - name: Configure Tor logrotate
   ansible.builtin.template:
