--- a/playbooks/roles/info_common/tasks/firewall.yaml
+++ b/playbooks/roles/info_common/tasks/firewall.yaml
@@ -20,7 +20,8 @@
 
 - name: Get ct counter
   changed_when: false
-  ansible.builtin.command: conntrack -C
+  ansible.builtin.command:
+    cmd: conntrack -C
   register: _result
 
 - name: File ct counter
