--- a/playbooks/roles/info_common/tasks/main.yaml
+++ b/playbooks/roles/info_common/tasks/main.yaml
@@ -3,6 +3,8 @@
   module_defaults:
     ansible.builtin.lineinfile:
       create: true
+      firstmatch: true
+      mode: "0644"
   block:
     - name: Dryrun of unattended-upgrade
       ansible.builtin.import_tasks: dry-update.yaml
