--- a/playbooks/roles/info_snowflake/tasks/process-runtime.yaml
+++ b/playbooks/roles/info_snowflake/tasks/process-runtime.yaml
@@ -3,18 +3,16 @@
   changed_when: false
   ansible.builtin.shell:
     cmd: |-
-      ps -eo etime,cmd --no-headers |
+      ps -eo etimes,cmd --no-headers |
         grep /usr/bin/snowflake-proxy |
         grep -v grep |
-        awk '{ print $1 }'|
-        grep . ||
-        echo "-"
+        awk '{ printf("%i-%02i\n", $1 / 86400, $1 % 86400 / 3600) }'
   register: _process
 
 - name: File process runtime
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
-    line: "{{ inventory_hostname }} etime {{ _process.stdout }}"
+    line: "{{ inventory_hostname }} etimes {{ _process.stdout | default('-') }}"
     path: "{{ tmp_dir }}/snowflake_process_runtime"
     regex: "^{{ inventory_hostname }} "
