--- a/playbooks/roles/info_snowflake/tasks/systemd-time.yaml
+++ b/playbooks/roles/info_snowflake/tasks/systemd-time.yaml
@@ -8,9 +8,9 @@
   delegate_to: localhost
   throttle: 1
   vars:
-    __starttime: "{{ _service.status.ExecMainStartTimestamp | default('-') }}"
-    __changetime: "{{ _service.status.StateChangeTimestamp | default('-') }}"
+    _starttime: "{{ _service.status.ExecMainStartTimestamp | default('-') }}"
+    _changetime: "{{ _service.status.StateChangeTimestamp | default('-') }}"
   ansible.builtin.lineinfile:
-    line: "{{ inventory_hostname }} Start {{ __starttime }} Change {{ __changetime }}"
-    path: "{{ tmp_dir }}/snowflake_systemd_times"
+    line: "{{ inventory_hostname }} Start {{ _starttime }} Change {{ _changetime }}"
+    path: "{{ tmp_dir }}/snowflake_systemd_time"
     regex: "^{{ inventory_hostname }} "
