--- a/playbooks/roles/info_tor/tasks/onionoo.yaml
+++ b/playbooks/roles/info_tor/tasks/onionoo.yaml
@@ -3,17 +3,21 @@
   ansible.builtin.uri:
     url: "https://onionoo.torproject.org/details?search={{ _fingerprint_hashed }}"
     return_content: true
+    status_code: [200, 404]
   register: _result
 
 - name: File onionoo
   delegate_to: localhost
   throttle: 1
+  when: _bridges
+  vars:
+    _bridges: "{{ _result.json.bridges[0] | default([]) }}"
   ansible.builtin.lineinfile:
     line: >-
       {{ inventory_hostname }}
-      {{ _result.json.bridges[0].bridgedb_distributor | default('-') }}
-      {{ _result.json.bridges[0].advertised_bandwidth | default('-') }}
-      {{ _result.json.bridges[0].transports | default(['n/a']) | join(',') }}
-      running: {{ _result.json.bridges[0].running | default('-') }}
+      {{ _bridges.bridgedb_distributor | default('-') }}
+      {{ _bridges.advertised_bandwidth | default('-') }}
+      {{ _bridges.transports | default(['n/a']) | join(',') }}
+      running: {{ _bridges.running | default('-') }}
     path: "{{ tmp_dir }}/tor_onionoo"
     regex: "^{{ inventory_hostname }} "
