--- a/playbooks/roles/setup_common/tasks/custom-command.yaml
+++ b/playbooks/roles/setup_common/tasks/custom-command.yaml
@@ -4,7 +4,8 @@
     - name: Run a custom command
       changed_when: false
       ansible.builtin.shell:
-        cmd: "{{ custom_command }}"
+        cmd: >-
+          {{ custom_command }}
         executable: /bin/bash
       register: _custom_command_result
 
