--- a/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
@@ -36,7 +36,8 @@
   retries: 3
   changed_when: _snowflake_patched.stdout_lines is search('patching file ')
   ansible.builtin.shell:
-    cmd: curl -s {{ item }} | patch -p 1
+    cmd: >-
+      curl -s {{ item }} -o /root/snowflake.patch && patch -p 1 </root/snowflake.patch
     chdir: /root/snowflake
   loop_control:
     label: "{{ item }}"
