--- a/playbooks/roles/setup_tor/tasks/firewall-ddos.yaml
+++ b/playbooks/roles/setup_tor/tasks/firewall-ddos.yaml
@@ -15,23 +15,29 @@
     - ipv6-rules.sh
   notify: Restart DDoS
 
-# it might be stopped manually
-- name: Check if DDoS is up
-  changed_when: _ddos_up.rc != 0
+- name: Ensure that DDoS will be up and running
+  changed_when: _ddos_is_up.rc != 0
+  failed_when: _ddos_is_up.rc > 1
   ansible.builtin.shell:
     cmd: |-
       set -euf
-      set -o pipefail
 
-      /root/ipv4-rules.sh | grep -q "DDoS IPv4"
-      /root/ipv6-rules.sh | grep -q "DDoS IPv6"
-    executable: /bin/bash
-  register: _ddos_up
+      if ! /root/ipv4-rules.sh >/tmp/ipv4; then
+        exit 2
+      fi
+
+      if ! /root/ipv6-rules.sh >/tmp/ipv6; then
+        exit 3
+      fi
+
+      grep -q "DDoS IPv4" /tmp/ipv4
+      grep -q "DDoS IPv6" /tmp/ipv6
+  register: _ddos_is_up
   notify: Restart DDoS
 
 - name: Create DDoS cron job for reboot
   ansible.builtin.cron:
-    name: "start firewall"
+    name: start firewall
     special_time: reboot
     job: >-
       {{ add_local_services_v4 }} {{ add_remote_services_v4 }} {{ configured_relays_v4 }} /root/ipv4-rules.sh start;
@@ -55,16 +61,16 @@
     path: "/root/firewall-ip{{ item }}.sh"
     state: absent
   with_items:
-    - "v4"
-    - "v6"
+    - v4
+    - v6
 
 - name: Remove iptables state
   ansible.builtin.file:
     path: "/etc/iptables/rules.{{ item }}"
     state: absent
   with_items:
-    - "v4"
-    - "v6"
+    - v4
+    - v6
 
 - name: Remove package iptables-persistent
   ansible.builtin.apt:
