--- a/playbooks/roles/setup_tor/tasks/main.yaml
+++ b/playbooks/roles/setup_tor/tasks/main.yaml
@@ -26,6 +26,7 @@
       force: true
     ansible.builtin.lineinfile:
       create: true
+      firstmatch: true
       owner: root
       group: root
       mode: "0644"
