--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -70,6 +70,12 @@
       tags:
         - base
 
+    - name: Update apt
+      when: ansible_facts.distribution in ('Debian', 'Ubuntu')
+      ansible.builtin.import_tasks: update-apt.yaml
+      tags:
+        - update-apt
+
     - name: IPv6
       tags:
         - ipv6
