retry gathering facts for the very first time

--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -1,6 +1,7 @@
 ---
 # Hint: facts cache is not updated if --tags or --limit is used, so use "--tags facts" if needed
 - name: Gather facts - subset
+  retries: 1
   ansible.builtin.setup:
     gather_subset:
       - "!all"
