--- a/playbooks/roles/setup_common/tasks/nginx.yaml
+++ b/playbooks/roles/setup_common/tasks/nginx.yaml
@@ -67,12 +67,13 @@
         dest: "/etc/nginx/conf.d/{{ inventory_hostname }}.crt"
       notify: Reload nginx
 
-- name: Create site directory
-  when: nginx_site_directory
+- name: Create site directories
+  when: nginx_site_directories | length > 0
   ansible.builtin.file:
-    path: /var/www/{{ nginx_site_directory }}
+    path: /var/www/{{ item.path }}
     state: directory
     mode: "0755"
+  loop: "{{ nginx_site_directories }}"
 
 - name: Configure nginx
   ansible.builtin.template:
