explain nginx site directory var

--- a/playbooks/roles/setup_common/defaults/main.yaml
+++ b/playbooks/roles/setup_common/defaults/main.yaml
@@ -23,4 +23,5 @@ custom_command: ""
 
 # nginx
 nginx_listener_default: false
+# "path" and "port" are expected per item
 nginx_site_directories: []
