play with output

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -16,11 +16,18 @@ remote_user = root
 
 ssh_args = -o ForwardAgent=no -o ForwardX11=no -o StrictHostKeyChecking=yes -o ControlMaster=auto -o ControlPersist=60s -o GSSAPIAuthentication=no -o IdentitiesOnly=yes -o ServerAliveInterval=60s
 
-# reduce noise
+# switch by ANSIBLE_DISPLAY_OK_HOSTS=false
+display_ok_hosts = true
+
+# switch by ANSIBLE_DISPLAY_SKIPPED_HOSTS=true
 display_skipped_hosts = false
 
+# only stats
+#stdout_callback = ansible.builtin.oneline
+#stdout_callback = community.general.unixy
+
 # timer stats for debug/profiling
-# callbacks_enabled=ansible.posix.profile_tasks
+#callbacks_enabled=ansible.posix.profile_tasks
 
 # clashes with tasks grep'ing directly the target syslog
 no_target_syslog = true
